<resources>
    <string name="app_name">RegalaPuntos</string>

    <string name="content_des">Logo de la app</string>
    <string name="username_placeholder">Ingrese un nombre de usuario</string>
    <string name="username_required">Ingrese el nombre de usuario que prefiera</string>
    <string name="email_placeholder">Ingrese su correo electrónico</string>
    <string name="email_required">Debe ingresar un correo electrónico válido</string>
    <string name="pass_placeholder">Ingrese su contraseña</string>
    <string name="pass_repeat_placeholder">Confirme su contraseña</string>
    <string name="pass_repeat_required">Repita su password</string>
    <string name="pass_help">Debe ingresar la contraseña asociada a su cuenta</string>
    <string name="btn_signIn">Iniciar sesión</string>
    <string name="btn_signUp">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>