<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<!-- Activity de Login/Register -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg_light"
    tools:context=".auth.SignupFragment"
    android:id="@+id/signup_frag">

    <ImageView
        android:id="@+id/appLogo"
        android:transitionName="logo"
        android:layout_width="@dimen/width_logo_signup"
        android:layout_height="@dimen/height_logo_signup"
        android:contentDescription="@string/content_des"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_username"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:transitionName="til_username"
        android:paddingHorizontal="@dimen/padding_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_min"
        android:hint="@string/username_placeholder"
        app:helperText="@string/username_required"
        app:startIconDrawable="@drawable/ic_user"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appLogo"
        app:layout_constraintBottom_toTopOf="@+id/til_email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:transitionName="et_username"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:transitionName="til_email"
        android:paddingHorizontal="@dimen/padding_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_min"
        android:hint="@string/email_placeholder"
        app:helperText="@string/email_required"
        app:startIconDrawable="@drawable/ic_email"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintBottom_toTopOf="@+id/til_pass"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:transitionName="et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass"
        android:transitionName="til_pass"
        android:paddingHorizontal="@dimen/padding_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_min"
        android:hint="@string/pass_placeholder"
        app:helperText="@string/pass_help"
        app:startIconDrawable="@drawable/ic_pass"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintBottom_toTopOf="@id/til_pass_confirm">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass"
            android:transitionName="et_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass_confirm"
        android:transitionName="til_pass_confirm"
        android:paddingHorizontal="@dimen/padding_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_min"
        android:hint="@string/pass_placeholder"
        app:helperText="@string/pass_help"
        app:startIconDrawable="@drawable/ic_pass"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_pass"
        app:layout_constraintBottom_toTopOf="@+id/lyt_btnNative">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_pass_confirm"
            android:transitionName="et_pass_confirm"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lyt_btnNative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/margin_min"
        app:layout_constraintTop_toBottomOf="@id/til_pass_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:transitionName="btn_reg"
            style="@style/BuyNdEarn.Button"
            android:text="@string/btn_signUp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>